Event based architecture based on Slurm: Epilog and Prolog
